--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -30,7 +30,7 @@
                         <div class="below-awesome">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                         <button>Sign Up</button>
                     </div>
-                    <img src="blue-image copy.jpeg" alt="A blue image.">
+                    <img src="blue-image.jpeg" alt="A blue image.">
                 </div>
             </div>
         </div>
