--- a/index.html
+++ b/index.html
@@ -28,12 +28,32 @@
                     <div class="right-text-content">
                         <div class="is-awesome">This website is awesome!</div>
                         <div class="below-awesome">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-                        <button>Sign Up</button>
+                        <form action="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">
+                            <button>Sign Up</button>
+                        </form>
                     </div>
                     <img src="blue-image.jpeg" alt="A blue image.">
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="random-information">
+        <div class="some-random-info">Some random information.</div>
+        <div class="box-container">
+            <div class="box-one"></div>
+            <div class="box-two"></div>
+            <div class="box-three"></div>
+            <div class="box-four"></div>
+        </div>
+        <div class="text-under-box">
+            <div class="under-box-text">this is some subtext under an illustration of an image</div>
+            <div class="under-box-text">this is some subtext under an illustration of an image</div>
+            <div class="under-box-text">this is some subtext under an illustration of an image</div>
+            <div class="under-box-text">this is some subtext under an illustration of an image</div>
+        </div>
+
+
     </div>
 </body>
 
