Add quote and author section

--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
             <div class="under-box-text">this is some subtext under an illustration of an image</div>
             <div class="under-box-text">this is some subtext under an illustration of an image</div>
         </div>
+    </div>
 
-
+    <div class="quote-outside">
+        <div class="quote-inside">
+            <div class="quote-text">Any fool can write code that a computer can understand. Good programmers write code that humans can understand.</div>
+            <div class="quote-author">- Martin Fowler</div>
+        </div>
     </div>
 </body>
 
