Add Call to Action Section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="is-awesome">This website is awesome!</div>
                         <div class="below-awesome">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                         <form action="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">
-                            <button>Sign Up</button>
+                            <button class="btn">Sign Up</button>
                         </form>
                     </div>
                     <img src="blue-image.jpeg" alt="A blue image.">
@@ -58,6 +58,16 @@
         <div class="quote-inside">
             <div class="quote-text">Any fool can write code that a computer can understand. Good programmers write code that humans can understand.</div>
             <div class="quote-author">- Martin Fowler</div>
+        </div>
+    </div>
+
+    <div class="calltoaction-center">
+        <div class="call-to-action">
+            <div class="right-call">
+                <div class="call-bold-text">Call to action! It's time!</div>
+                <div class="call-small-text">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="btnn">Sign Up</button>    
         </div>
     </div>
 </body>
