Add footer and finish project

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                     <div class="header-logo">Header Logo</div>
                     <div class="right-links">
                         <ul>
-                            <li><a href="https://www.google.com">header link one</a></li>
-                            <li><a href="https://www.google.com">header link two</a></li>
-                            <li><a href="https://www.google.com">header link three</a></li>
+                            <li><a href="https://www.google.com" style="color:#6e6f71; text-decoration: none;">header link one</a></li>
+                            <li><a href="https://www.google.com" style="color:#6e6f71; text-decoration: none;" >header link two</a></li>
+                            <li><a href="https://www.google.com" style="color:#6e6f71; text-decoration: none;">header link three</a></li>
                         </ul>
                     </div>
                 </div>
@@ -69,6 +69,10 @@
             </div>
             <button class="btnn">Sign Up</button>    
         </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer-text">Crafted by <a href="https://github.com/maxpajewski" style="color:white">Max Pajewski</a> for <a href="https://www.theodinproject.com" style="color:white"> The Odin Project</a></div>
     </div>
 </body>
 
